--- a/spec/fixtures/notion/create_page.yml
+++ b/spec/fixtures/notion/create_page.yml
@@ -5,18 +5,18 @@ http_interactions:
     uri: https://api.notion.com/v1/pages
     body:
       encoding: UTF-8
-      string: '{"parent":{"database_id":"ab7e7b22-7793-492a-ba6b-3295f8b19341"},"properties":{"Name":{"title":[{"text":{"content":"Another
-        Notion page"}}]},"Description":{"rich_text":[{"text":{"content":"Page description"}}]}},"children":[{"object":"block","type":"heading_2","heading_2":{"text":[{"type":"text","text":{"content":"A
+      string: '{"parent":{"database_id":"dd428e9d-d3fe-4171-870d-a7a1902c748b"},"properties":{"Name":{"title":[{"text":{"content":"Another
+        Notion page"}}]}},"children":[{"object":"block","type":"heading_2","heading_2":{"text":[{"type":"text","text":{"content":"A
         heading"}}]}}]}'
     headers:
       Accept:
       - application/json; charset=utf-8
       User-Agent:
-      - Notion Ruby Client/0.0.7
+      - Notion Ruby Client/0.0.8
       Authorization:
       - Bearer <NOTION_API_TOKEN>
       Notion-Version:
-      - '2021-05-13'
+      - '2021-08-16'
       Content-Type:
       - application/json
       Accept-Encoding:
@@ -27,7 +27,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 27 Jul 2021 10:39:49 GMT
+      - Sun, 29 Aug 2021 17:51:21 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -54,74 +54,83 @@ http_interactions:
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
         https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
         https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
-        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
-        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
-        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
-        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
-        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
-        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
       X-Content-Security-Policy:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
         https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
         https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
-        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
-        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
-        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
-        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
-        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
-        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
       X-Webkit-Csp:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
         https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
         https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
-        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
-        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
-        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
-        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
-        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
-        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
       Set-Cookie:
-      - notion_browser_id=fc5cd959-578d-4b01-a5cf-180c1a6b9cdb; Domain=www.notion.so;
-        Path=/; Expires=Fri, 04 Apr 2053 12:26:29 GMT; Secure
+      - notion_browser_id=238ab41f-5d9b-4783-9647-b2b163d0b104; Domain=www.notion.so;
+        Path=/; Expires=Wed, 07 May 2053 19:38:01 GMT; Secure
       Etag:
-      - W/"391-afZwyKyZUA0Pe61oRFOZ3yzUE50"
+      - W/"3b7-aPgFx6vlWUURM5t7oOF9iPfEHms"
       Vary:
       - Accept-Encoding
       Cf-Cache-Status:
@@ -131,13 +140,13 @@ http_interactions:
       Server:
       - cloudflare
       Cf-Ray:
-      - 67553efbed45ae55-KIX
+      - 6867a07999cd32c5-CDG
     body:
       encoding: UTF-8
-      string: '{"object":"page","id":"567dca6c-3c0c-4888-bc78-10b596bced02","created_time":"2021-07-27T10:39:00.000Z","last_edited_time":"2021-07-27T10:39:00.000Z","parent":{"type":"database_id","database_id":"ab7e7b22-7793-492a-ba6b-3295f8b19341"},"archived":false,"properties":{"Description":{"id":"ddNO","type":"rich_text","rich_text":[{"type":"text","text":{"content":"Page
-        description","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Page
-        description","href":null}]},"Name":{"id":"title","type":"title","title":[{"type":"text","text":{"content":"Another
+      string: '{"object":"page","id":"49b5505c-9b0b-4be0-850d-570db310dea3","created_time":"2021-08-29T17:51:00.000Z","last_edited_time":"2021-08-29T17:51:00.000Z","cover":null,"icon":null,"parent":{"type":"database_id","database_id":"dd428e9d-d3fe-4171-870d-a7a1902c748b"},"archived":false,"properties":{"Orbit
+        Status":{"id":"%3DadK","type":"rich_text","rich_text":[]},"Orbit Note URL":{"id":"L%3AsP","type":"url","url":null},"Member
+        Email":{"id":"%5BIFC","type":"email","email":null},"Send to Orbit":{"id":"%5EoR%3F","type":"checkbox","checkbox":false},"Date":{"id":"g%60km","type":"date","date":null},"Name":{"id":"title","type":"title","title":[{"type":"text","text":{"content":"Another
         Notion page","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Another
-        Notion page","href":null}]}},"url":"https://www.notion.so/Another-Notion-page-567dca6c3c0c4888bc7810b596bced02"}'
-  recorded_at: Tue, 27 Jul 2021 10:39:49 GMT
+        Notion page","href":null}]}},"url":"https://www.notion.so/Another-Notion-page-49b5505c9b0b4be0850d570db310dea3"}'
+  recorded_at: Sun, 29 Aug 2021 17:51:21 GMT
 recorded_with: VCR 6.0.0
