--- a/spec/fixtures/notion/update_page.yml
+++ b/spec/fixtures/notion/update_page.yml
@@ -2,20 +2,19 @@
 http_interactions:
 - request:
     method: patch
-    uri: https://api.notion.com/v1/pages/2de466f0-9861-466b-9bc2-c987965da010
+    uri: https://api.notion.com/v1/pages/c7fd1abe-8114-44ea-be77-9632ea33e581
     body:
       encoding: UTF-8
-      string: '{"id":"2de466f0-9861-466b-9bc2-c987965da010","properties":{"Name":[{"text":{"content":"A
-        Notion page"}}]}}'
+      string: '{"properties":{"Name":[{"text":{"content":"Nicolas Goutay"}}]}}'
     headers:
       Accept:
       - application/json; charset=utf-8
       User-Agent:
-      - Notion Ruby Client/0.0.7
+      - Notion Ruby Client/0.0.8
       Authorization:
       - Bearer <NOTION_API_TOKEN>
       Notion-Version:
-      - '2021-05-13'
+      - '2021-08-16'
       Content-Type:
       - application/json
       Accept-Encoding:
@@ -26,7 +25,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 27 Jul 2021 10:35:00 GMT
+      - Sun, 29 Aug 2021 17:50:21 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -53,74 +52,83 @@ http_interactions:
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
         https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
         https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
-        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
-        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
-        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
-        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
-        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
-        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
       X-Content-Security-Policy:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
         https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
         https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
-        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
-        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
-        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
-        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
-        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
-        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
       X-Webkit-Csp:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
         https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
         https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
-        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
-        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
-        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
-        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
-        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
-        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
       Set-Cookie:
-      - notion_browser_id=f99aa1f5-ccb0-470c-bd6c-88df72efa0ff; Domain=www.notion.so;
-        Path=/; Expires=Fri, 04 Apr 2053 12:21:40 GMT; Secure
+      - notion_browser_id=2c532044-d331-4ed3-96af-9149d054185c; Domain=www.notion.so;
+        Path=/; Expires=Wed, 07 May 2053 19:37:01 GMT; Secure
       Etag:
-      - W/"29f-c/my+Rhp7UJlgvokEWEpPC81fSM"
+      - W/"4b0-rkZ89rDxahb2+CfzhhuDlK0lPN0"
       Vary:
       - Accept-Encoding
       Cf-Cache-Status:
@@ -130,11 +138,15 @@ http_interactions:
       Server:
       - cloudflare
       Cf-Ray:
-      - 675537ebed7dfbe8-KIX
+      - 68679f039b480820-CDG
     body:
       encoding: UTF-8
-      string: '{"object":"page","id":"2de466f0-9861-466b-9bc2-c987965da010","created_time":"2021-07-26T15:05:00.000Z","last_edited_time":"2021-07-27T10:35:00.000Z","parent":{"type":"database_id","database_id":"ab7e7b22-7793-492a-ba6b-3295f8b19341"},"archived":false,"properties":{"Description":{"id":"ddNO","type":"rich_text","rich_text":[]},"Name":{"id":"title","type":"title","title":[{"type":"text","text":{"content":"A
-        Notion page","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
-        Notion page","href":null}]}},"url":"https://www.notion.so/A-Notion-page-2de466f09861466b9bc2c987965da010"}'
-  recorded_at: Tue, 27 Jul 2021 10:35:00 GMT
+      string: '{"object":"page","id":"c7fd1abe-8114-44ea-be77-9632ea33e581","created_time":"2021-04-30T07:49:00.000Z","last_edited_time":"2021-08-29T17:50:00.000Z","cover":null,"icon":null,"parent":{"type":"database_id","database_id":"dd428e9d-d3fe-4171-870d-a7a1902c748b"},"archived":false,"properties":{"Orbit
+        Status":{"id":"%3DadK","type":"rich_text","rich_text":[{"type":"text","text":{"content":"OK","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"OK","href":null}]},"Orbit
+        Note URL":{"id":"L%3AsP","type":"url","url":"https://app.orbit.love/orbit/members/phacks3?type=notes"},"Member
+        Email":{"id":"%5BIFC","type":"email","email":"nicolas@orbit.love"},"Send to
+        Orbit":{"id":"%5EoR%3F","type":"checkbox","checkbox":true},"Date":{"id":"g%60km","type":"date","date":null},"Name":{"id":"title","type":"title","title":[{"type":"text","text":{"content":"Nicolas
+        Goutay","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Nicolas
+        Goutay","href":null}]}},"url":"https://www.notion.so/Nicolas-Goutay-c7fd1abe811444eabe779632ea33e581"}'
+  recorded_at: Sun, 29 Aug 2021 17:50:21 GMT
 recorded_with: VCR 6.0.0
